--- a/budg-track/package.json
+++ b/budg-track/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^5.14.0",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
