--- a/budg-track/package.json
+++ b/budg-track/package.json
@@ -19,6 +19,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
