--- a/bidget_track/package.json
+++ b/bidget_track/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^4.1.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^5.14.1",
     "react": "^18.2.0",
