--- a/bidget_track/package.json
+++ b/bidget_track/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@iconify/react": "^4.1.1",
+    "@mui/material": "^5.15.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^5.14.1",
     "react": "^18.2.0",
